# libsigcomp

./: Compilation_Linux.md  Compilation_Symbian.md  Compilation__Win32.md  Compilation__WinCE.md  Compliance.md  Getting_Started.md  README.md  SigComp.sln  Supported__OS.md  TCP_Compression.md  UDP_Compression.md  UDP_DECOMPRESSION.md
debug/: demo.ilk  libsigcomp.exp  libsigcomp.ilk  libsigcomp.lib
demo/: ReadMe.txt  demo.c  demo.cpp  demo.vcproj  stdafx.h
demo/Debug/: BuildLog.htm  mt.dep  vc80.idb
demoS60/: .cproject  .project
demoS60/group/: ABLD.BAT  bld.inf  demoS60.mmp
demoS60/include/: demoS60.h
demoS60/sis/: demoS60_EKA2.pkg
demoS60/source/: demoS60.cpp
libsigcomp/: .cproject  .project  Makefile  Makefile.am  autogen.sh  config.status  configure  configure.in  libsigcomp.vcproj
libsigcomp/Debug/: BuildLog.htm  mt.dep  vc80.idb
libsigcomp/asm/: deflate.asm
libsigcomp/bwins/: libsigcomp.def
libsigcomp/group/: ABLD.BAT  bld.inf  libsigcomp.mmp
libsigcomp/include/: global_config.h
libsigcomp/include/libsigcomp/: DeflateCompressor.h  MYTYPES.h  Mutex.h  NACK_CODES.h  SIGCOMP_HEADERS_INDEX.h  SafeObject.h  SigCompBuffer.h  SigCompManager.h  SigCompMessage.h  UDVM_INSTRUCTIONS.h  UDVM_OPERANDS.h  binary_utils.h  libsigcomp_config.h  rfc1662_ppfcs16.h  rfc3174_us-sha1.h  rfc3485_dictionary_sip.h  rfc5049_sip.h
libsigcomp/include/libsigcomp/Compressors/: DeflateCompressor.h  DummyCompressor.h
libsigcomp/include/libsigcomp/SigCompLayer/: SigCompCompartment.h  SigCompCompressor.h  SigCompCompressorDisp.h  SigCompDecompressorDisp.h  SigCompState.h  SigCompStateHandler.h  SigCompUDVM.h
libsigcomp/include/libsigcomp/dictionaries/: PresenceDictionaryState.h  SipDictionaryState.h  rfc3485_dictionary_sip.h  rfc5112_dictionary_presence.h
libsigcomp/include/libsigcomp/headers/: header_nack.h
libsigcomp/include/libsigcomp/structures/: struct_decompResult.h  struct_nack_info.h  struct_req_feedback.h  struct_sigcomp_parameters.h
libsigcomp/include/libsigcomp/zlib/: crc32.h  deflate.h  zconf.h  zconf.in.h  zlib.h  zutil.h
libsigcomp/sis/: libsigcomp_EKA2.pkg
libsigcomp/source/: DeflateCompressor.cxx  DeflateCompressor.ghost.cxx  DeflateCompressor.zlib.cxx  Mutex.cxx  SafeObject.cxx  SigCompBuffer.cxx  SigCompManager.cxx  SigCompMessage.cxx  binary_utils.cxx  rfc1662_ppfcs16.cxx  rfc3174_us-sha1.cxx
libsigcomp/source/Compressors/: DeflateCompressor.cxx  DeflateCompressor.ghost.cxx  DeflateCompressor.zlib.cxx  DummyCompressor.cxx
libsigcomp/source/SigCompLayer/: SigCompCompartment.cxx  SigCompCompressor.cxx  SigCompCompressorDisp.cxx  SigCompDecompressorDisp.cxx  SigCompState.cxx  SigCompStateHandler.cxx  SigCompUDVM.ByteCopy.cxx  SigCompUDVM.Instructions.cxx  SigCompUDVM.Nack.cxx  SigCompUDVM.Operands.cxx  SigCompUDVM.StateManagement.cxx  SigCompUDVM.cxx
libsigcomp/source/dictionaries/: PresenceDictionaryState.cxx  SipDictionaryState.cxx
libsigcomp/source/zlib/: adler32.c  compress.c  crc32.c  deflate.c  example.c  gzio.c  infback.c  inffast.c  inflate.c  inftrees.c  trees.c  uncompr.c  zutil.c
libsigcomp/src/: DeflateCompressor.cxx  DeflateCompressor.ghost.cxx  DeflateCompressor.h  DeflateCompressor.zlib.cxx  DeflateData.Ghost.cxx  DeflateData.cxx  DeflateData.h  DeflateData.zlib.cxx  DummyCompressor.cxx  DummyCompressor.h  Mutex.cxx  Mutex.h  PresenceDictionaryState.cxx  PresenceDictionaryState.h  SIGCOMP_HEADERS_INDEX.h  SafeObject.cxx  SafeObject.h  SigCompBuffer.cxx  SigCompBuffer.h  SigCompCompartment.cxx  SigCompCompartment.h  SigCompCompressor.cxx  SigCompCompressor.h  SigCompCompressorData.cxx  SigCompCompressorData.h  SigCompCompressorDisp.cxx  SigCompCompressorDisp.h  SigCompDecompressorDisp.cxx  SigCompDecompressorDisp.h  SigCompManager.cxx  SigCompManager.h  SigCompMessage.cxx  SigCompMessage.h  SigCompState.cxx  SigCompState.h  SigCompStateHandler.cxx  SigCompStateHandler.h  SigCompUDVM.ByteCopy.cxx  SigCompUDVM.Instructions.cxx  SigCompUDVM.Nack.cxx  (+24 more)
