lib_LIBRARIES = libsigcomp.a

AM_CXXFLAGS = $(CXX_CFLAGS)

libsigcomp_a_SOURCES = src/binary_utils.cxx src/DeflateCompressor.cxx src/DeflateCompressor.ghost.cxx src/DeflateCompressor.zlib.cxx src/DummyCompressor.cxx src/Mutex.cxx src/PresenceDictionaryState.cxx src/rfc1662_ppfcs16.cxx src/rfc3174_us-sha1.cxx src/SafeObject.cxx src/SigCompBuffer.cxx src/SigCompCompartment.cxx src/SigCompCompressor.cxx src/SigCompCompressorDisp.cxx src/SigCompDecompressorDisp.cxx src/SigCompManager.cxx src/SigCompMessage.cxx src/SigCompState.cxx src/SigCompStateHandler.cxx src/SigCompUDVM.ByteCopy.cxx src/SigCompUDVM.cxx src/SigCompUDVM.Instructions.cxx src/SigCompUDVM.Nack.cxx src/SigCompUDVM.Operands.cxx src/SigCompUDVM.StateManagement.cxx src/SipDictionaryState.cxx src/adler32.c src/compress.c src/deflate.c src/trees.c src/zutil.c
include_HEADERS = src/binary_utils.h src/deflate.h src/DeflateCompressor.h src/DummyCompressor.h src/global_config.h src/libsigcomp_config.h src/Mutex.h src/MYTYPES.h src/NACK_CODES.h src/PresenceDictionaryState.h src/rfc1662_ppfcs16.h src/rfc3174_us-sha1.h src/rfc3485_dictionary_sip.h src/rfc5049_sip.h src/rfc5112_dictionary_presence.h src/SafeObject.h src/SigCompBuffer.h src/SigCompCompartment.h src/SigCompCompressor.h src/SigCompCompressorDisp.h src/SigCompDecompressorDisp.h src/SigCompManager.h src/SigCompMessage.h src/SigCompState.h src/SigCompStateHandler.h src/SigCompUDVM.h src/SIGCOMP_HEADERS_INDEX.h src/SipDictionaryState.h src/struct_decompResult.h src/struct_nack_info.h src/struct_req_feedback.h src/struct_sigcomp_parameters.h src/trees.h src/UDVM_INSTRUCTIONS.h src/UDVM_OPERANDS.h src/zconf.h src/zlib.h src/zutil.h config.h