lib_LIBRARIES = libsigcomp.a

AM_CXXFLAGS = $(CXX_CFLAGS)

libsigcomp_a_SOURCES = src/adler32.c src/binary_utils.cxx src/compress.c src/c_wrapper.cxx src/deflate.c src/DeflateCompressor.cxx src/DeflateData.cxx src/DeflateData.Ghost.cxx src/DeflateData.zlib.cxx src/DummyCompressor.cxx src/Mutex.cxx src/PresenceDictionaryState.cxx src/rfc1662_ppfcs16.cxx src/rfc3174_us-sha1.cxx src/SafeObject.cxx src/SigCompBuffer.cxx src/SigCompCompartment.cxx src/SigCompCompressor.cxx src/SigCompCompressorData.cxx src/SigCompCompressorDisp.cxx src/SigCompDecompressorDisp.cxx src/SigCompManager.cxx src/SigCompMessage.cxx src/SigCompState.cxx src/SigCompStateHandler.cxx src/SigCompUDVM.ByteCopy.cxx src/SigCompUDVM.cxx src/SigCompUDVM.Instructions.cxx src/SigCompUDVM.Nack.cxx src/SigCompUDVM.Operands.cxx src/SigCompUDVM.StateManagement.cxx src/SipDictionaryState.cxx src/trees.c src/zutil.c

pkginclude_HEADERS = src/*.h
